-*-Outline-*-

LectroTest Change Log
Tom Moertel (tom@moertel.com)

* 0.30_00   (XXXXXXXXXX)

** Improvements

- Full test coverage!  Devel::Coverage says that the test suite now
  covers 100% of all LectroTest modules' statements, branches,
  conditionals, and subroutines.

** Fixes

** Misc

- Added a bunch of new test cases. 

* 0.20_10   (2004-02-16)

** Improvements

- Now you can mix LectroTest and Test::* modules!
  Test::LectroTest::Compat provides the compatibility magic.

** Fixes

- Updated copyright notices.

- Removed use of List::Util from t/001.t.  (This should be
  the last use of the module.  Now we can cut the dependency.)

- Renamed the test .t files to something sensible.

** Misc

- Made list of dependencies in Build.PL pedantically complete.



* 0.20_08   (2005-02-05)

** Improvements

- Paste can now be used to join elements of generated lists,
  which are "flattened" before pasting.  For example, the
  following are equivalent:
      Paste( (Bool) x 4 )
      Paste( List(Bool, length=>4) )

- Removed dependency upon Data::Dumper's Sortkeys method and
  upon List::Util entirely.  This makes LectroTest compatible with
  older versions of Perl.  (I tested on v5.6.1 built for i386-linux.)
  Thanks Alex Kapranoff for the Sortkeys dependency report.

** Fixes

- Minor clarifying edits to documentation.


* 0.20_07   (2004-09-30)

** Improvements

- You can now specify multiple sets of generator-bindings for a
  property.  This lets you focus on specific portions of your test
  space to ensure the desired coverage.  For example, if you wanted
  to cover all integers but especially focus on the range [-1,1]:

  Property {
      ##[ x <- Int ], [ x <- Int(range=>[-1,1]) ]##
      blah($x) != 0
  }, name => "blah result is non-zero" ;

- Generator now accepts an :all export tag to export everything
  (which is what I use almost all of the time).

- If a generator throws an exception, it is caught and reported